tests/baselines/reference/collisionExportsRequireAndAmbientFunction.errors.txt
collisionExportsRequireAndAmbientFunction.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== collisionExportsRequireAndAmbientFunction.ts (1 errors) ====
    export declare function exports(): number;
    
    export declare function require(): string[];
        
    declare module m1 {
        function exports(): string;
        function require(): number;
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export declare function exports(): string;
        export declare function require(): string[];
        var a = 10;
    }